Fixed z-index bug in slider handles

--- a/ui/css/pods-front.css
+++ b/ui/css/pods-front.css
@@ -2,6 +2,10 @@
 	font-size: 14px !important;
 }
 
+.ui-slider-handle {
+	z-index: 0 !important;
+}
+
 a.button {
 	-webkit-border-radius: 10px;
 	-moz-border-radius: 10px;
